--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,8 @@
                         food: 0,
                         food_cards: [],
 
+                        dredge: 0,
+                        dredge_cards: [],
                         explore: 0,
                         explore_cards: [],
                         flying: 0,
@@ -1284,6 +1286,10 @@
                         }
 
                         // keyword
+                        if (text_temp.includes('dredge')) {
+                            archetype_counts.dredge += count;
+                            archetype_counts.dredge_cards.push(d[0]);
+                        }
                         if (text_temp.includes('explores')) {
                             archetype_counts.explore += count;
                             archetype_counts.explore_cards.push(d[0]);
@@ -1474,6 +1480,11 @@
                     // keyword
                     html = '';
                     html += '<table>';
+                    if (archetype_counts.dredge / counts_sum >= ratio_refer) {
+                        html += '<tr>';
+                        html += '<td>Dredge</td>';
+                        html += '</tr>';
+                    }
                     if (archetype_counts.explore / counts_sum >= ratio_refer) {
                         html += '<tr>';
                         html += '<td>Explore</td>';
