--- a/index.html
+++ b/index.html
@@ -1095,6 +1095,7 @@
                         'Niv-Mizzet Reborn': 'Niv-Mizzet',
                         'Oko, Thief of Crowns': 'Oko',
                         'Omnath, Locus of Creation': 'Omnath',
+                        'Ramunap Ruins': 'Ramunap',
                         'Sephara, Sky\'s Blade': 'Sephara',
                         'Scapeshift': 'Scapeshift',
                         'Teferi, Hero of Dominaria': 'Teferi', 
@@ -1168,6 +1169,8 @@
                         human_cards: [],
                         knight: 0,
                         knight_cards: [],
+                        rogue: 0,
+                        rogue_cards: [],
                         vampire: 0,
                         vampire_cards: [],
                         warrior: 0,
@@ -1321,6 +1324,10 @@
                         if (creature_type || type_temp.includes('knight') || text_temp.includes('knight')) {
                             archetype_counts.knight += count;
                             archetype_counts.knight_cards.push(d[0]);
+                        }
+                        if (creature_type || type_temp.includes('rogue') || text_temp.includes('rogue')) {
+                            archetype_counts.rogue += count;
+                            archetype_counts.rogue_cards.push(d[0]);
                         }
                         if (creature_type || type_temp.includes('vampire') || text_temp.includes('vampire')) {
                             archetype_counts.vampire += count;
@@ -1566,6 +1573,11 @@
                     if (archetype_counts.knight / counts_sum >= ratio_lord) {
                         html += '<tr>';
                         html += '<td>Knight</td>';
+                        html += '</tr>';
+                    }
+                    if (archetype_counts.rogue / counts_sum >= ratio_lord) {
+                        html += '<tr>';
+                        html += '<td>Rogue</td>';
                         html += '</tr>';
                     }
                     if (archetype_counts.vampire / counts_sum >= ratio_lord) {
